# claude-usage

./: CLAUDE.md  Cargo.toml  README.md  flake.nix
crates/: .usage.json
crates/claude-usage/: Cargo.toml  crate.nix
crates/claude-usage-lib/: Cargo.toml
crates/claude-usage-lib/examples/: basic_usage.rs
crates/claude-usage-lib/src/: calculator.rs  data_structures.rs  identifier.rs  lib.rs  loader.rs  monitor.rs  pricing.rs
crates/claude-usage/src/: main.rs
crates/claude-usage/src/widgets/: header.rs  lifetime_popup.rs  mod.rs  popup.rs  predictions.rs  progress_bars.rs  shortcuts.rs  statistics.rs
nix/modules/: devshell.nix  pre-commit.nix  rust.nix
