[package]
name = "claude-usage-monitor"
version = "0.1.0"
edition = "2021"
description = "Core library for monitoring and analyzing Claude API usage"
authors = ["Claude"]
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.0"
shellexpand = "3.0"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"