[package]
authors = ["Red <me@knownas.red>"]
edition = "2021"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "claude-usage"
description = "A simple Rust project using Nix"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.14", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.29.0"
claude-usage-monitor = { path = "../claude-usage-lib" }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
shellexpand = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
